2008-12-04  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Debugger.addin.xml: Changed default label of debug command
	for projects since to avoid it being confused with the global debug
	command in the key bindings panel.

	* MonoDevelop.Debugger/Extensions.cs: Honor the RunWithWarning and
	BuildBeforeExecuting preferences.

	* MonoDevelop.Debugger/DebugExecutionHandlerFactory.cs: Track api
	changes.

	* MonoDevelop.Debugger/DebugCommands.cs: Honor the RunWithWarning and
	BuildBeforeExecuting preferences. If no debugger is installed, the
	Debug command will work as a regular Run command.

2008-12-02  Michael Hutchinson  <mhutchinson@novell.com>

	* AssemblyInfo.cs: Add AssemblyInfo.cs files that are autogenerated from
	the addin manifests.

2008-12-02  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Debugger/ObjectValueTreeView.cs: Allow editing by pressing
	F2.

2008-12-01  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Debugger.addin.xml: Fix command names.

2008-11-26  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* gtk-gui/gui.stetic:
	* gtk-gui/generated.cs:
	* MonoDevelop.Debugger.mdp:
	* MonoDevelop.Debugger.addin.xml:
	* MonoDevelop.Debugger/DebugCommands.cs:
	* MonoDevelop.Debugger/ExceptionsDialog.cs:
	* MonoDevelop.Debugger/DebuggingService.cs:
	* MonoDevelop.Debugger/ObjectValueTreeView.cs:
	* gtk-gui/MonoDevelop.Debugger.ExceptionsDialog.cs:
	* MonoDevelop.Debugger/ExpressionEvaluatorDialog.cs:
	* gtk-gui/MonoDevelop.Debugger.ExpressionEvaluatorDialog.cs: Implemented
	exceptions dialog and expression evaluation dialog.

2008-11-25  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* gtk-gui/gui.stetic:
	* MonoDevelop.Debugger.mdp:
	* MonoDevelop.Debugger.addin.xml:
	* MonoDevelop.Debugger/LocalsPad.cs:
	* MonoDevelop.Debugger/Extensions.cs:
	* MonoDevelop.Debugger/ThreadsPad.cs:
	* MonoDevelop.Debugger/Initializer.cs:
	* MonoDevelop.Debugger/StackTracePad.cs:
	* MonoDevelop.Debugger/DebugCommands.cs: